<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
  <groupId>clonegod</groupId>
  <artifactId>spider</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
 
  <!-- 聚合子模块 -->
  <modules>
    <module>spider-api</module>
    <module>spider-common</module>
    <module>spider-core</module>
    <module>spider-dao</module>
    <module>spider-web</module>
    <module>spider-ext-activex</module>
  </modules>
  
  	<!-- 
		spring boot 管理的依赖包属性列表 - a list of supported properties: 
		https://github.com/spring-projects/spring-boot/blob/v1.5.6.RELEASE/spring-boot-dependencies/pom.xml 
	-->
	
	<!-- 全局管理依赖版本 -->
	<properties>
		<!-- Common libs -->
		<spring.boot.version>1.5.6.RELEASE</spring.boot.version>
		<cglib.version>3.2.5</cglib.version>
		<javassist.version>3.20.0-GA</javassist.version>
		<netty.version>3.2.5.Final</netty.version>
		<httpclient.version>4.5.3</httpclient.version>
		<guava.version>22.0</guava.version>
		<commons.lang3.version>3.6</commons.lang3.version>
		<commons.text.version>1.1</commons.text.version>
		<commons.io.version>2.5</commons.io.version>
		<commons.codec.version>1.10</commons.codec.version>
		<zookeeper.version>3.4.9</zookeeper.version>
		<zkclient.version>0.2</zkclient.version>
		<curator.version>2.12.0</curator.version>
		<jedis.version>2.9.0</jedis.version>
		<xmemcached.version>1.3.6</xmemcached.version>
		<thrift.version>0.8.0</thrift.version>
		<servlet.version>2.5</servlet.version>
		<jetty.version>6.1.26</jetty.version>
		<jfreechart.version>1.0.13</jfreechart.version>
		<validation.version>1.1.0.Final</validation.version>
		<hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
		<xstream.version>1.4.1</xstream.version>
		<fastjson.version>1.2.31</fastjson.version>
		<jackson.version>2.8.8</jackson.version>
		<gson.version>2.8.1</gson.version>
		<jsonpath.version>2.4.0</jsonpath.version>
		<itextpdf.version>5.5.11</itextpdf.version>
		<itext.asian.version>5.2.0</itext.asian.version>
		<htmlunit.version>2.26</htmlunit.version>
		
		<!-- Database libs -->
		<mysql.connector.version>5.1.44</mysql.connector.version>
		<druid.version>1.1.4</druid.version>
		<hikaricp.version>2.7.2</hikaricp.version>
		
		<!-- Log libs -->
		<slf4j.version>1.7.25</slf4j.version>
        <slf4j.log4j12.version>1.7.25</slf4j.log4j12.version>
        <logback.version>1.2.2</logback.version>
        
		<!-- Test libs -->
		<junit.version>4.12</junit.version>
		<hamcrest.version>1.3</hamcrest.version>
		<junitparams.version>1.1.0</junitparams.version>
		<mockito.version>1.10.19</mockito.version>
		
		<!-- for maven compiler plugin -->
        <java.version>1.8</java.version>
        <file.encoding>UTF-8</file.encoding>
        
		<!-- Build args -->
        <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
            -Djava.net.preferIPv4Stack=true
        </argline>
        <skip.maven.deploy>false</skip.maven.deploy>
        <updateReleaseInfo>true</updateReleaseInfo>
        <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
	</properties>

	<!-- 全局依赖管理：并不下载依赖，仅提供依赖的声明。具体需要依赖某些jar，在子模块中声明，且不再需要制定版本号。 -->
	<dependencyManagement>
		<dependencies>
			<!-- Common libs -->
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
			    <groupId>cglib</groupId>
			    <artifactId>cglib</artifactId>
			    <version>${cglib.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.javassist</groupId>
			    <artifactId>javassist</artifactId>
			    <version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.htmlunit</groupId>
				<artifactId>htmlunit</artifactId>
				<version>${htmlunit.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.mortbay.jetty</groupId>
			    <artifactId>jetty</artifactId>
			    <version>${jetty.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.google.guava</groupId>
			    <artifactId>guava</artifactId>
			    <version>${guava.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-lang3</artifactId>
			    <version>${commons.lang3.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-text</artifactId>
			    <version>${commons.text.version}</version>
			</dependency>
			<dependency>
			    <groupId>commons-io</groupId>
			    <artifactId>commons-io</artifactId>
			    <version>${commons.io.version}</version>
			</dependency>
			<dependency>
			    <groupId>commons-codec</groupId>
			    <artifactId>commons-codec</artifactId>
			    <version>${commons.codec.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.fasterxml.jackson.core</groupId>
			    <artifactId>jackson-core</artifactId>
			    <version>${jackson.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.google.code.gson</groupId>
			    <artifactId>gson</artifactId>
			    <version>${gson.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.jayway.jsonpath</groupId>
			    <artifactId>json-path</artifactId>
			    <version>${jsonpath.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.itextpdf</groupId>
			    <artifactId>itextpdf</artifactId>
			    <version>${itextpdf.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.itextpdf</groupId>
			    <artifactId>itext-asian</artifactId>
			    <version>${itext.asian.version}</version>
			</dependency>
			
			<!-- Database libs -->
			<dependency>
			    <groupId>mysql</groupId>
			    <artifactId>mysql-connector-java</artifactId>
			    <version>${mysql.connector.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.zaxxer</groupId>
			    <artifactId>HikariCP</artifactId>
			    <version>${hikaricp.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.alibaba</groupId>
			    <artifactId>druid</artifactId>
			    <version>${druid.version}</version>
			</dependency>
			
			<!-- Log libs -->
			<dependency>
			    <groupId>org.slf4j</groupId>
			    <artifactId>slf4j-api</artifactId>
			    <version>${slf4j.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.slf4j</groupId>
			    <artifactId>slf4j-log4j12</artifactId>
			    <version>${slf4j.log4j12.version}</version>
			    <scope>test</scope>
			</dependency>
			<dependency>
			    <groupId>ch.qos.logback</groupId>
			    <artifactId>logback-classic</artifactId>
			    <version>${logback.version}</version>
			    <scope>test</scope>
			</dependency>
			
			<!-- Test libs -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>${hamcrest.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>pl.pragmatists</groupId>
				<artifactId>junitparams</artifactId>
				<version>${junitparams.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<!-- ########################## UNIT TEST ########################## -->
		<!-- 将test scope的依赖放在parent中，所有子模块直接继承使用。(test scope 测试时依赖，不会打包，没有传递性！)-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
		</dependency>
		<dependency>
			<groupId>pl.pragmatists</groupId>
			<artifactId>junitparams</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
		</dependency>
	</dependencies>

	<build>
		<!-- 资源拷贝、过滤 -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
					<include>**/*.ftl</include>
					<include>**/*.yml</include>
					<include>static/**</include>
					<include>templates/**</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<!-- springboot plugin -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- 编译 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<fork>true</fork>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<!-- 资源拷贝 -->
			<plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<!-- 单元测试 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <forkMode>once</forkMode>
                    <argLine>${argline}</argLine>
                    <systemProperties>
                    </systemProperties>
                </configuration>
            </plugin>
			<!-- 打包 -->
            <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-jar-plugin</artifactId>
			    <configuration>
			        <archive>
			            <addMavenDescriptor>true</addMavenDescriptor>
			            <index>true</index>
			            <manifest>
			                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
			                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
			            </manifest>
			        </archive>
			    </configuration>
			</plugin>
			<!-- 上传私服（Nexus） -->
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>${skip.maven.deploy}</skip>
                </configuration>
            </plugin>
		</plugins>
	</build>

</project>